# Manufacturing-Analytics-Platform

./: README.md  docker-compose.yml  index.html
backend/app/: auth.py  database.py  main.py  schemas.py
frontend/: Dockerfile  api.js  app.js  charts.js  crud.js  index.html  manufacturing.db  renderers.js  requirements.txt  views.js
frontend/app/: analytics.py  auth.py  database.py  main.py  manufacturing.db  models.py  pyproject.toml  requirements.txt  seed_data.py
frontend/app/manufacturing_analytics_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/app/routers/: auth_router.py  dashboard_router.py  downtime_router.py  machines_router.py  maintenance_router.py  production_router.py  quality_router.py  reports_router.py
frontend/app/tests/: test_auth_seed.py
frontend/css/: style.css
frontend/js/: app.js  crud.js
frontend/setuptools-83.0.0.dist-info/: RECORD
frontend/wheel-0.47.0.dist-info/: RECORD
