[project]
name = "manufacturing-analytics-platform"
version = "0.1.0"
description = "Manufacturing Analytics FastAPI backend for production, maintenance, quality, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
    "SQLAlchemy==2.0.51",
    "pydantic==2.13.4",
    "email-validator==2.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.32",
    "openpyxl==3.1.5",
    "reportlab==5.0.0"
]

[project.urls]
Homepage = "https://example.com"
Source = "https://example.com/repo"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
